fixed background image not covering full background

--- a/src/style.css
+++ b/src/style.css
@@ -25,9 +25,8 @@ html {
 body {
     height: 100vh;
     width: 100vw;
-    background: url('./img/mario-sky.gif');
+    background: url('./img/sky-background.jpg');
     background-size: cover;
-    background-repeat: no-repeat;
 }
 
 #content {
